[package]
name = "project-profile-finder"
version = "0.1.0"
edition = "2021"

[dependencies]
petgraph = { version = "0.6.5", features = ["stable_graph", "serde-1"] }
rstar = { version = "0.12.0", features = ["serde"] }
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.128"
clap = { version = "4.5.17", features = ["derive"] }
bincode = "1.3.3"
anyhow = "1.0.89"
hashbrown = { version = "0.15.0", features = ["serde"] }  

[[bin]]
name = "preprocess"
path = "src/bin/preprocess.rs"

[[bin]]
name = "query"
path = "src/bin/query.rs"